--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ edit_uri: https://github.com/OpenBlocksTeam/openblocks-docs/edit/main/docs/
 theme:
   name: material
   favicon: images/favicon.ico
+  copyright: Copyright &copy; 2021 OpenBlocks
   palette:
     primary: blue
     accent: pink
