feat: kotlin??, some plugins

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,3 +18,9 @@ theme:
     scheme: slate
     primary: blue
     accent: pink
+
+markdown_extensions:
+  - pymdownx.highlight
+  - pymdownx.superfences
+  - pymdownx.snippets
+  - pymdownx.tabbed
